--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -127,63 +127,69 @@ Este resultado  da base para hablar de la termalización de una forma matemátic
 EL resultado anterior tiene varias generalidades que se quieren recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos. Además de que esta ha sido la única restricción sobre todo el universo, no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. no se ha hablado tampoco de ninguna forma en la que el subsistema llega al equilibrio ni que esta en algún estado específico.
 \\
 Los valores propios de energía tampoco son importantes en las cotas dadas anteriormente, en el teorema al ser demostrado fue encontrado algunos valores propios de energía que al ser promediados dan 0. La energía es importante al buscar las formas exactas en las que evoluciona el sistema pero aquí se demostró que para la equilibración en intervalos de tiempo muy grandes no son muy importantes, las cotas son independientes del tiempo. La forma en que se dividió el universo (subsistema y baño) no es importante, solo es importante para el teorema \ref{equlibracion} la dimensión del subsistema y no la especificación de la forma o un subsistema particular. Esto permite decir que cualquier subsistema con dimensión $d_{S}$ estará en equilibrio, los varios subsistemas bastante pequeños de dimensión $d_{S}$ también estarán en equilibrio.
+\\
+El teorema \ref{equlibracion} puso una cota a la fluctuación de $\rho_{S}(t)$ alrededor de $\omega_{S}$ esto ya es un inicio pero aunque esta cota exista no se ha hablado de cuales sistemas tendrán fluctuaciones suficientemente pequeñas para poder decir que se encuentra en equilibrio. Ahora se explorará cuáles son los estados que se equilibrarán, el siguiente teorema dirá cuales estados tienen fluctuaciones muy pequeñas.
 
-\textbf{Equilibrio de conjuntos típicos}
-Aunque se puso una cota a la fluctuación de $\rho_{S}(t)$ alrededor de $\omega_{S}$ se quiere ver cuales casos esta fluctuación es tan pequeña que el subsistema se equilibrará para esto se mostrará el siguiente teorema\\
+\begin{theorem}\label{teorema2}
 
-\begin{theorem}
-i)El promedio de la dimensión efectiva $\langle d^{eff}(\omega) \rangle_{\psi}$, donde el promedio es sobre estados puros aleatorios uniformemente distribuidos $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$. Es tal que 
+\begin{enumerate}
+
+\item El promedio de la dimensión efectiva $\langle d^{eff}(\omega) \rangle_{\psi}$, donde el promedio es sobre estados puros aleatorios uniformemente distribuidos $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$. Es tal que
 \begin{equation}
-\langle d^{eff}(\omega) \rangle_{\psi} \ge \frac{d_{R}}{2}
+\langle d^{eff}(\omega) \rangle_{\psi} \ge \frac{d_{R}}{2}.
 \end{equation}
-ii)Para un estado aleatorio $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$, la probabilidad $Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \}$ de que $d^{eff}(\omega)$ es más pequeña que $\frac{d_{R}}{4}$ es:
+\item Para un estado aleatorio $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$, la probabilidad $\Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \}$ de que $d^{eff}(\omega)$ es más pequeña que $\frac{d_{R}}{4}$ es exponencialmente pequeña:
 \begin{equation}
-Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \} \leq 2 \exp{-C \sqrt{d_{R}}}
+Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \} \leq 2 \exp{-C \sqrt{d_{R}}},
 \end{equation}
-con constante $c= \frac{(ln 2)^{2}}{72 \pi^{3}} \approx 10^{-4}$.
+con constante $c= \frac{(\ln 2)^{2}}{72 \pi^{3}} \approx 10^{-4}$.
+\end{enumerate}
 \end{theorem}
 
-\textbf{Demostración i)}
-Primero se prueba la cota de la pureza esperada de $\omega$,
+\textbf{Demostración}
 
+\begin{enumerate}
+\item
+Primero se prueba la cota de la pureza esperada de $\omega$. Para esta prueba se usarán varios resultados ya empleados en el capítulo anterior como: la operación "flip"  $F$ y la identidad $\langle \ket{\psi} \bra{\psi} \otimes \ket{\psi} \bra{\psi} \rangle_{\psi} =  \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)}$. Además se usará la notación de $ \ket{E_{k}} \equiv \ket{k}$ y $\ket{E_{k}} \otimes \ket{E_{l}} \equiv \ket{kl}$. Se introduce el mapeo de desfase como $ \$[ \rho ] \equiv  \sum_{k} \ket{k} \bra{k} \rho \ket{k}\bra{k}$, implica que $\omega= \langle \ket{\psi}\bra{\psi} \rangle_{t}= \$ [\ket{\psi}\bra{\psi}]$. Entonces usando la operación "flip"  se escribe $\langle \Tr (\omega)^{2} \rangle_{\psi}$ como
+ 
 \begin{multline}
 \langle \Tr (\omega)^{2} \rangle_{\psi} = \langle \Tr(\omega \otimes \omega)F) \rangle_{\psi}\\
 = \Tr(\$ \otimes \$ [ \langle \ket{\psi} \bra{\psi} \otimes \ket{\psi} \bra{\psi} \rangle_{\psi}]F)\\
 =\Tr \Bigg( \$ \otimes \$ \Bigg[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} \Bigg]F \Bigg)\\
 = \sum_{kl} \Tr \Bigg(  \ket{kl}\bra{kl}  \Bigg(  \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} \Bigg) \ket{kl}\bra{kl} F \Bigg)\\
-=\sum_{kl} \Tr ( \ket{kl}\bra{lk} ) \Bigg( \frac{\ket{kl} \Pi_{RR}(\bra{kl}+\bra{lk})}{d_{R}(d_{R}+1)}  \Bigg)\\
-=\sum_{k} \frac{2 \ket{kk} \Pi_{RR}\bra{kk}}{d_{R}(d_{R}+1)} \\
-\leq \sum_{k} \frac{2 \ket{k} \Pi_{R}\bra{k}}{d_{R}(d_{R}+1)} < \frac{2}{d_{R}}
+=\sum_{kl} \Tr ( \ket{kl}\bra{lk} ) \Bigg( \frac{\bra{kl} \Pi_{RR}(\ket{kl}+\ket{lk})}{d_{R}(d_{R}+1)}  \Bigg)\\
+=\sum_{k} \frac{2 \bra{kk} \Pi_{RR}\ket{kk}}{d_{R}(d_{R}+1)} \\
+\leq \sum_{k} \frac{2 \bra{k} \Pi_{R}\ket{k}}{d_{R}(d_{R}+1)} < \frac{2}{d_{R}}
 \end{multline}
 se sigue directamente que 
 \begin{equation}
-\langle d^{eff}(\omega) \rangle_{\psi} = \langle\frac{1}{\Tr (\omega)^{2}} \rangle \geq \frac{1}{\langle \Tr (\omega)^{2} \rangle_{\psi}} \geq \frac{d_{R}}{2}
+\langle d^{eff}(\omega) \rangle_{\psi} = \Bigg \langle \frac{1}{\Tr (\omega)^{2}} \Bigg \rangle_{\psi} \geq \frac{1}{\langle \Tr (\omega)^{2} \rangle_{\psi}} > \frac{d_{R}}{2}
 \end{equation}
 concluyendo la prueba.
-\textbf{Demostración ii)}
+\item
 Para demostrar la segunda parte se usará el lema de levy pero no directamente sino sobre la función 
 \begin{equation}
 f(\psi) \equiv f(\vec{x}(\psi)) = \ln \Bigg( \Tr \Big( \tilde{\$}[ \ket{\psi}\bra{\psi}]^{2} \Big) \Bigg)
 \end{equation}
 
-Donde el operador  $ \tilde{\$} $ actúa sobre el subespacio $\mathcal{H}_{T} \subset \mathcal{H}$ generado por los estados de energía con proyección diferente de cero sobre $\mathcal{H}_{R}$ (estados que satisfagan $\bra{k} \Pi_{R} \ket{k} \neq 0$). El subespacio $\mathcal{H}_{T}$ contiene todos los estados que pueden aparecer durante la evolución temporal del estado inicial en $\mathcal{H}_{R}$ , y $\ \widetilde{\$} $ mapea estos estados de regreso a $\mathcal{H}_{R}$ de acuerdo a 
+Donde el operador  $ \tilde{\$} $ actúa sobre el subespacio $\mathcal{H}_{T} \subseteq \mathcal{H}$ generado por los estados de energía con proyección diferente de cero sobre $\mathcal{H}_{R}$ (estados que satisfagan $\bra{k} \Pi_{R} \ket{k} \neq 0$). El subespacio $\mathcal{H}_{T}$ contiene todos los estados que pueden aparecer durante la evolución temporal del estado inicial en $\mathcal{H}_{R}$ , y $\ \widetilde{\$} $ mapea estos estados de regreso a $\mathcal{H}_{R}$ de acuerdo a 
 \begin{equation}
  \tilde{\$}[\rho]= \sum_{k}  \tilde{\ket{k}} \bra{k} \rho \ket{k} \tilde{\bra{k}} \quad y \quad  \tilde{\ket{k}}= \frac{1}{\sqrt{\bra{k}\Pi_{R}\ket{k}}} \Pi_{R} \ket{k}.
 \end{equation}
 nótese que cuando el Hamiltoniano conmuta con $\Pi_{R}$, $ \tilde{\$}$ es identico al $ \$ $ en $\mathcal{H}_{T}$. Calculando el promedio de la función se encuentra
 \begin{multline}
-\langle \ln \Big( \Tr \Big( \tilde{\$}[ \ket{\psi}\bra{\psi}]^{2} \Big) \Big) \rangle_{\psi}\\
-\leq \ln \langle \Tr \Big( \tilde{\$}[\ket{\psi}\bra{\psi}]^{2} \Big) \rangle_{\psi}\\
-= \ln \Tr\Bigg( \tilde{\$}\otimes \tilde{\$} [\langle \ket{\psi}\bra{\psi} \otimes \ket{\psi}\bra{\psi} \rangle_{\psi}] F \Bigg)\\
-= \ln \Bigg( \Tr \Big( \tilde{\$}\otimes \tilde{\$} \Bigg[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} \Bigg] F   \Big) \Bigg)\\
-\ln \Bigg( \sum_{kl} \Tr \Big( \tilde{\ket{kl}} \bra{kl} \frac{\Pi_{RR} \Bigg ( \mathbbm{1}+F)}{d_{R}(d_{R}+1)} \Bigg) \ket{kl}  \tilde{\bra{lk}}  \Big) \Bigg)\\
-= \ln \Bigg( \sum_{kl} \tilde{\bra{lk}}\tilde{\ket{kl}} \Big( \frac{\bra{kl}\Pi_{RR}(\ket{kl}+\ket{lk})}{d_{R}(d_{R}+1)} \Big) \Bigg)\\
-\leq \ln \Big( \frac{2}{d_{R}(d_{R}+1)} \sum_{kl} \bra{lk}\Pi_{RR}\ket{kl}  \Big)\\
-= \ln \Big(  \frac{2}{d_{R}(d_{R}+1)} \sum_{k} \bra{k}\Pi_{R} \ket{k}  \Big) < \ln (\frac{2}{d_{R}})
+\Big \langle \ln \Big( \Tr \Big( \tilde{\$}[ \ket{\psi}\bra{\psi}]^{2} \Big) \Big) \Big \rangle_{\psi}\\
+\leq \ln \Big \langle \Tr \Big( \tilde{\$}[\ket{\psi}\bra{\psi}]^{2} \Big) \Big \rangle_{\psi}\\
+= \ln \Tr\Big( \tilde{\$}\otimes \tilde{\$} [\langle \ket{\psi}\bra{\psi} \otimes \ket{\psi}\bra{\psi} \rangle_{\psi}] F \Big)\\
+= \ln \bigg( \Tr \bigg( \tilde{\$}\otimes \tilde{\$} \bigg[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} \bigg] F   \bigg) \bigg)\\
+= \ln \Bigg( \sum_{kl} \Tr \bigg( \tilde{\ket{kl}} \bra{kl} \bigg( \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} \bigg) \ket{kl}  \tilde{\bra{lk}}  \bigg) \Bigg)\\
+= \ln \Bigg( \sum_{kl} \tilde{\bra{lk}}\tilde{\ket{kl}} \bigg( \frac{\bra{kl}\Pi_{RR}(\ket{kl}+\ket{lk})}{d_{R}(d_{R}+1)} \bigg) \Bigg)\\
+\leq \ln \bigg( \frac{2}{d_{R}(d_{R}+1)} \sum_{kl} \bra{lk}\Pi_{RR}\ket{kl}  \bigg)\\
+= \ln \bigg(  \frac{2}{d_{R}(d_{R}+1)} \sum_{k} \bra{k}\Pi_{R} \ket{k}  \bigg) < \ln (\frac{2}{d_{R}}).
 \end{multline}
 Para acotar la constante de Lipchitz  de la función $f(\psi)$ se usará otra función
 \begin{equation}
-g(\psi)= \ln \Tr \Bigg[  \Big( \sum_{n} \ket{\hat{n}}\bra{\hat{n}} \tilde{\$} [\ket{\psi}\bra{\psi}] \ket{\hat{n}}\bra{\hat{n}} \Big)^{2}  \Bigg]
+g(\psi)= \ln \Tr \Bigg[  \bigg( \sum_{n} \ket{\hat{n}}\bra{\hat{n}} \tilde{\$} [\ket{\psi}\bra{\psi}] \ket{\hat{n}}\bra{\hat{n}} \bigg)^{2}  \Bigg]
 \end{equation}
 donde $\ket{\hat{n}}$ es una base ortonormal de $\mathcal{H}_{R}$. Escribiendo
 
@@ -192,115 +198,147 @@ t_{nk0}= \Re [ \bra{\hat{n}} \tilde{\ket{k}} \bra{k}\ket{\psi}] \quad y \quad  t
 \end{equation}
 se sigue que 
 \begin{equation}
-g(\psi)= \ln \Tr \Bigg[  \Big( \sum_{nkz} t_{nkz}^{2}  \ket{\hat{n}} \bra{\hat{n}}  \Big)^{2} \Bigg]= \ln \sum_{n} \Big( \sum_{kz} t_{nkz}^{2} \Big)^{2}.
+g(\psi)= \ln \Tr \Bigg[  \Bigg( \sum_{nkz} t_{nkz}^{2}  \ket{\hat{n}} \bra{\hat{n}}  \Bigg)^{2} \Bigg]= \ln \sum_{n} \Bigg( \sum_{kz} t_{nkz}^{2} \Bigg)^{2}.
 \end{equation}
 
 Para encontrar la constante de Lipschitz de $g$ es suficiente con encontrar una cota superior al gradiente 
 \begin{equation}
 \frac{\partial g}{\partial t_{nkz}}=\frac{1}{\sum_{n'} (\sum_{k'z'}t_{n'k'z'}^{2})^{2}} 2.2.t_{nkz} \sum_{k'z'}t_{nk'z'}^{2}.
 \end{equation}
-introduciendo la notación $p_{n}=\sum_{kz}t_{nkz}^{2}$, y notando que $\sum_{n} p_{n}=1$, se encuentra 
+Introduciendo la notación $p_{n}=\sum_{kz}t_{nkz}^{2}$, y notando que $\sum_{n} p_{n}=1$, se encuentra 
 \begin{multline}
-|\nabla g|^{2}= \sum_{nkz} (\frac{\partial g}{\partial t_{nkz}})^{2}= \frac{16 \sum_{n} p_{n}^{3}}{(\sum_{n} p_{n}^{2})^{2}}\\
-\leq \frac{16(\sum_{n} p_{n}^{2})^{3/2}}{\sum_{n} p_{n}^{2})^{2}}\\
+|\nabla g|^{2}= \sum_{nkz} \bigg(\frac{\partial g}{\partial t_{nkz}} \bigg )^{2}= \frac{16 \sum_{n} p_{n}^{3}}{(\sum_{n} p_{n}^{2})^{2}}\\
+\leq \frac{16(\sum_{n} p_{n}^{2})^{3/2}}{(\sum_{n} p_{n}^{2})^{2}}\\
 =\frac{16}{(\sum_{n} p_{n}^{2})^{1/2}}\\
-=\frac{16}{(\sum_{n} p_{n}^{2})^{1/2}}\\
-\leq 16 \sqrt{d_{R}}
+\leq 16 \sqrt{d_{R}},\\
 \end{multline}
-Por lo tanto la constante de Lipschitzs de $g$ alcanza por lo menos $4 \sqrt[4]{d_{R}}$. Para obtener la constante de Lipchistz de $f$ se nota que $g(\psi) \geq f(\psi)$ la igualdad se da si $ { \ket{ \hat{n}} }$ es una base  propia de $\Tr_{B} \ket{\psi}\bra{\psi}$. Ahora para dos vectores cuales quiera, sin perdida de generalidad asumir $f(\psi_{1}) \leq f(\psi_{2})$, y tomar ${ \ket{\hat{n}} }$ como la base propia de $\Tr_{B} \ket{\psi}\bra{\psi}$. Entonces,
+Por lo tanto la constante de Lipschitzs de $g$ llega hasta $4 \sqrt[4]{d_{R}}$. Para obtener la constante de Lipchistz de $f$ se nota que $g(\psi) \geq f(\psi)$ la igualdad se da si $ \{ \ket{ \hat{n}} \} $ es una base  propia de $\Tr_{B} \ket{\psi}\bra{\psi}$. Ahora para dos vectores cuales quiera, sin perdida de generalidad asumir $f(\psi_{1}) \leq f(\psi_{2})$, y tomar $ \{ \ket{\hat{n}} \}$ como la base propia de $\Tr_{B} \ket{\psi}\bra{\psi}$. Entonces,
 \begin{equation}
 f(\psi_{1})- f(\psi_{2})\leq g(\psi_{1})- g(\psi_{2}) \leq 4\sqrt[4]{d_{R}} |\ket{\psi_{1}}-\ket{\psi_{2}}|_{2},
 \end{equation}
 entonces la constante de Lipschitz para $f$ está acotada por $4\sqrt[4]{d_{R}}$.
-Aplicando el lema de Levy a $f(\psi)$ y  por la observación $\Pr[x>a] \leq b$ y $x \geq y$ implica $\Pr[y>a] \leq b$ y sustituyendo la cota en $\langle f(\psi) \rangle_{\psi}$ obtenida arriba y limitando más esta 
-%-------
-%\begin{equation}
-%\ln\Big( \Tr (\tilde{\$}[\ket{\psi}\bra{\psi}]^{2}) \Big) \geq \ln\Big( \Tr ( \$ [\ket{\psi}\bra{\psi}]^{2}) \Big)
-%\end{equation}
+Aplicando el lema de Levy a $f(\psi)$ y  observando que $\Pr \{ x>a \} \leq b$ y $x \geq y$ implica $\Pr \{ y>a \} \leq b$  sustituyendo la cota en $\langle f(\psi) \rangle_{\psi}$ obtenida arriba entonces 
+
+\begin{equation}
+\ln\Big( \Tr (\tilde{\$}[\ket{\psi}\bra{\psi}]^{2}) \Big) \geq \ln ( \Tr ( \$ [\ket{\psi}\bra{\psi}]^{2}) )
+\end{equation}
+
 esto da 
 
-%\begin{equation}
-%Pr_{\psi} [ \ln (\Tr( \$ [\ket{\psi}\bra{\psi}]^{2})) > \ln \frac{2e^{\epsilon}}{d_{R}}  ] \leq 2\exp(-\frac{\epsilon^{2}\sqrt{d_{R}}}{72\pi^{3}})
+\begin{equation}
+\Pr_{\psi}  \bigg \{ \ln (\Tr ( \$ [\ket{\psi}\bra{\psi}]^{2})) > \ln\frac{2e^{\epsilon}}{d_{R}} \bigg \} \leq 2 \exp (-\frac{\epsilon^{2} \sqrt{d_{R}}}{72 \pi^{3}})
+\end{equation}
 
-%\end{equation}
-%------
 Tomando la desigualdad que está dentro de los corchetes  multiplicándola por menos y tomando su exponencial se llega
 
 \begin{equation}
-Pr_{\psi} \Big [  d^{eff}(\omega) < \frac{d_{R}}{2e^{\epsilon}} \Big ] \leq 2\exp(-\frac{\epsilon^{2}\sqrt{d_{R}}}{72\pi^{3}}).
+\Pr_{\psi} \bigg \{  d^{eff}(\omega) < \frac{d_{R}}{2e^{\epsilon}} \bigg \} \leq 2\exp(-\frac{\epsilon^{2}\sqrt{d_{R}}}{72\pi^{3}}).
 \end{equation}
 
-y haciendoque $\epsilon=\ln 2$ se llega al resultado esperado.
-La primera parte del teorema 2 nos habla de cómo el promedio de la dimensión efectiva es más grande que la dimensión del subespacio de Hilbert esto significa que si se tiene estados de un subespacio bastante grande se puede asegurar un $d^{eff}(\omega)$ grane que implica un $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ pequeño. La segunda parte solo confirma de manera más estricta el hecho de encontrar un $d^{eff}(\omega)$ pequeño, mostrando que la probabilidad de encontrar una dimensión efectiva menor a $\frac{d_{R}}{4}$ es exponencialmente pequeña.\\
-\textbf{equilibrio de estados genéricos}:
-usando el teorema 2 para ver qué ocurre con un estado escogido de forma aleatorio del espacio total $\mathcal{H}$, un estado genérico. Esto es simplemente poner $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega)~d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$.Dado que $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$ para un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.\\
-\textbf{Equilibración de sistemas lejanos del equilibrio}:
-Qué ocurre con los sistemas que están lejos del equilibrio. Lo dicho arriba ya cualquier se pensaría que  que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que arriba se usó un estado genérico y los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos por el capítulo anterior se sabe que cono cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico. Para poder sacar algo de esta pregunta se planteará la situación normal, hay un baño que consiste de un número muy grande de partículas de las cuales se conoce unos parámetros macroscópicos, dentro de este se pone un subsistema con un estado inicial arbitrario pero descorrelacionado con el ambiente. Ahora la pregunta es ¿ el subsistema se equilibra?, se verá que para cualquier estado inicial del subsistema y para casi todos los estados iniciales del baño el subsistema se equilibra. Esto incluye cuando el subsistema está lejos del equilibrio.
-El estado inicial del sistema está dado por $\ket{\Psi}_{SB}=\ket{\psi}_{S} \ket{\psi}_{B}$. El estado del subsistema es uno arbitrario $\ket{\psi}_{S}$ en el espacio de Hilbert. Dado unos parámetros macroscópicos el baño  debe cumplir con estos luego el estado del baño $\ket{\phi}_{B} \in \mathcal{H}_{B}^{R} \subset\mathcal{H}_{B}$. Esta restricción mantiene la generalidad de seguir en cualquier espacio de Hilbert restringido. Puede tener o no un sentido termodinámico o macroscópico. Pero la restricción es solo inicial al evolucionar el baño en el tiempo este puede moverse fuera de $\mathcal{H}_{B}^{R}$. Usando el teorema 2 para $\mathcal{H}_{R}= \ket{\psi}_{S} \otimes \mathcal{H}_{B}^{R}$ luego $d_{R}=d_{B}^{R}$ esto da como resultado que para casi todos los estados iniciales del baño y cualquier estado del subsistema $d^{eff}(\omega) \geq \frac{d_{B}^{R}}{4}$ lo cual significa que el subsistema se equilibrará para esas condiciones, mientras que $d_{B}^{R} >> d_{S}^{2}$.
-El mecanismo en que el subsistema se equilibra puede ser bastante complicada ya que el baño pasa por muchos estados diferentes y no llega el equilibrio. Aunque el baño no llegue a hacerlo y se salga del subespacio $\mathcal{H}_{B}^{R}$ y el subsistema  puede equilibrarse de todas formas. En principio puede que la evolución del subsistema sea sensible a la forma precisa del baño.
-Para ver que el baño no se equilibra de manera genérica se verá que $d^{eff}(\omega_{S})$ es mucho mayor que $d^{eff}(\rho_{B}(t))$ lo cual muestra que el baño sigue evolucionando y no se equilibra en ningún estado. Como los dos sistemas están en un estado puro $Rank(\rho_{B}(t))=Rank(\rho_{S}(t)) \geq d_{S}$ como la dimensión efectiva de un estado es siempre menor a su rango se obtiene 
+y haciendo que $\epsilon=\ln 2$ se llega al resultado esperado.
+\\
+\end{enumerate}
+
+La primera parte del teorema \ref{teorema2} nos habla de cómo el promedio de la dimensión efectiva es más grande que la dimensión del subespacio de Hilbert esto significa que si se tiene estados de un subespacio bastante grande se puede asegurar un $d^{eff}(\omega)$ grade esto implica un $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ pequeño. La segunda parte solo confirma de manera más estricta el hecho de encontrar un $d^{eff}(\omega)$ pequeño, mostrando que la probabilidad de encontrar una dimensión efectiva menor a $\frac{d_{R}}{4}$ es exponencialmente pequeña.\\
+\\
+Usando en teorema \ref{teorema2} se puede ver qué ocurre con un estado escogido de forma aleatoria del espacio total $\mathcal{H}$, un estado genérico. El análisis se sigue simplemente poniendo $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega) \sim d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$, como $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$. Un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.
+\\
+Se podría suponer que  con los teoremas presentados hasta el momento el problema de termalización se ha resulto mayoritariamente pero qué ocurre con los sistemas que están lejos del equilibrio. Con lo dicho arriba sobre los estados genéricos se pensaría que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos, por el capítulo anterior se sabe que con cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico.
+\\
+Para poder sacar algo de esta pregunta se planteará la situación común, hay un baño que consiste de un número muy grande de partículas de las cuales se conoce unos parámetros macroscópicos, dentro de este se pone un subsistema con un estado inicial arbitrario pero descorrelacionado con el ambiente. Ahora la pregunta es ¿ el subsistema se equilibra?, se verá que para cualquier estado inicial del subsistema y para casi todos los estados iniciales del baño el subsistema se equilibra. Esto incluye cuando el subsistema está lejos del equilibrio.
+\\
+El estado inicial del sistema está dado por $\ket{\Psi}_{SB}=\ket{\psi}_{S} \ket{\psi}_{B}$. El estado del subsistema es uno arbitrario $\ket{\psi}_{S}$ en el espacio de Hilbert. Dado unos parámetros macroscópicos el baño  debe cumplir con estos, luego el estado del baño $\ket{\phi}_{B} \in \mathcal{H}_{B}^{R} \subseteq \mathcal{H}_{B}$. Esta restricción mantiene la generalidad de seguir en cualquier espacio de Hilbert restringido. Pero la restricción es solo inicial al evolucionar el baño en el tiempo este puede moverse fuera de $\mathcal{H}_{B}^{R}$.
+\\
+Usando el teorema \ref{teorema2} para $\mathcal{H}_{R}= \ket{\psi}_{S} \otimes \mathcal{H}_{B}^{R}$ entonces $d_{R}=d_{B}^{R}$ esto da como resultado que para casi todos los estados iniciales del baño y cualquier estado del subsistema este se equilibrará para estas condiciones, mientras que $d_{B}^{R} >> d_{S}^{2}$. El mecanismo en que el subsistema se equilibra puede ser bastante complicado ya que el baño pasa por muchos estados diferentes y no llega el equilibrio. Aunque el baño no llegue al equilibrio y se salga del subespacio $\mathcal{H}_{B}^{R}$ el subsistema  puede equilibrarse de todas formas. 
+\\
+En principio puede que la evolución del subsistema sea sensible a la forma precisa del baño. Para ver que el baño no se equilibra de manera genérica se verá que $d^{eff}(\omega_{S})$ es mucho mayor que $d^{eff}(\rho_{B}(t))$ lo cual muestra que el baño sigue evolucionando y no se equilibra en ningún estado. Como los dos sistemas están en un estado puro $\rank(\rho_{B}(t))=\rank(\rho_{S}(t)) \geq d_{S}$ como la dimensión efectiva de un estado es siempre menor a su rango se obtiene 
 
 \begin{equation}
-d^{eff}(\rho_{B}(t)) \geq d_{S}
+d^{eff}(\rho_{B}(t)) \leq d_{S}
 \end{equation}
 
 pero 
 
 \begin{equation}
-d^{eff}(\omega_{B})\leq \frac{d_{eff}(\omega)}{d_{S}}
+d^{eff}(\omega_{B}) \geq \frac{d_{eff}(\omega)}{d_{S}}
 \end{equation}
 
-Pero para un estado genérico el teorema 2 ii dice $d^{eff}(\omega) > \frac{d_{R}}{4}$ se tiene
+Pero para un estado genérico la segunda parte del teorema \ref{teorema2}  dice $d^{eff}(\omega) > \frac{d_{R}}{4}$ se tiene
 
 \begin{equation}
-d^{eff}(\omega_{B}) \leq \frac{d^{R}}{4d_{S}}=\frac{d_{B}^{R}}{4d_{S}} >>d_{S} \leq d^{eff}(\rho_{B}(t))
+d^{eff}(\omega_{B}) \geq \frac{d^{R}}{4d_{S}}=\frac{d_{B}^{R}}{4d_{S}} \gg d_{S} \geq d^{eff}(\rho_{B}(t)).
 \end{equation}
-\textbf{Independencia del estado inicial}
-LO que se ha mostrado hasta ahora ha sido como si el subsistema es pequeño este se equilibrará. Ahora el enfoque que se quiere mostrar es cual sería la dependencia del estado de equilibrio del subsistema. Hasta ahora el estado inicial podría hacer que el equilibrio sea un estado diferente dependiendo del inicial. Sea el estado de equilibrio del subsistema $\omega_{S}^{\psi}$.Como es conocido se desearía que el estado de equilibrio dependa solo de los parámetros macroscópicos y no del estado inicial microscópico.
+
+
+Lo trabajado anteriormente muestra cómo susbsistemas de dimensión pequeña en comparación con el ambiente se equilibrarán. Ahora se verá cual sería la dependencia del estado de equilibrio del subsistema. Hasta ahora el estado inicial podría hacer que el equilibrio sea un estado diferente dependiendo del inicial. Sea el estado de equilibrio del subsistema $\omega_{S}^{\psi}$.Como es conocido se desearía que el estado de equilibrio dependa solo de los parámetros macroscópicos y no del estado inicial microscópico.
+\\
 El teorema siguiente prueba que para casi todos los estados en un subsistema restringido llevan al mismo estado de equilibrio.
 
 \begin{theorem}
-i) Casi todos los estados iniciales de un subespacio restringido bastante grande llevan al mismo estado de equilibrio de un subsistema pequeño. En particula, con $\langle .\rangle_{\psi}$ siendo el promedio sobre estados puros aleatoriamente uniformes $\ket{\psi(0)} \in \mathcal{H}_{R} \subset \mathcal{H}_{S} \otimes \mathcal{H}_{B}$ u $\Omega_{S}= \langle \omega_{S}^{\psi} \rangle_{\psi}$ :
+\begin{enumerate}
+\item Casi todos los estados iniciales de un subespacio restringido bastante grande llevan al mismo estado de equilibrio de un subsistema pequeño. En particula, con $\langle .\rangle_{\psi}$ siendo el promedio sobre estados puros aleatoriamente uniformes $\ket{\psi(0)} \in \mathcal{H}_{R} \subset \mathcal{H}_{S} \otimes \mathcal{H}_{B}$ y $\Omega_{S}= \langle \omega_{S}^{\psi} \rangle_{\psi}$ :
 \begin{equation}
-\langle D(\omega_{S}^{\psi}, \Omega_{S}) \rangle_{\psi} \leq \sqrt{\frac{d_{S} \delta}{4d_{R}}} \leq \sqrt{\frac{d_{S}}{4d_{R}}}
+\langle D(\omega_{S}^{\psi}, \Omega_{S}) \rangle_{\psi} \leq \sqrt{\frac{d_{S} \delta}{4d_{R}}} \leq \sqrt{\frac{d_{S}}{4d_{R}}}.
 \end{equation}
 La primera desigualdad es más estricta pero más complicada 
 \begin{equation}
-\delta= \sum_{k}\bra{E_{k}}\frac{\Pi_{R}}{d_{R}}\ket{E_{k}} Tr_{S} \Big( Tr_{B} (\ket{E_{k}} \bra{E_{k}}) \Big)^{2} \leq  1
+\delta= \sum_{k}\bra{E_{k}}\frac{\Pi_{R}}{d_{R}}\ket{E_{k}} \Tr_{S} ( \Tr_{B} (\ket{E_{k}} \bra{E_{k}}) )^{2} \leq  1,
 \end{equation}
-Donde $\Pi_{k}$ es el proyector sobre $\mathcal{H}_{R}$
-ii)Paraunestado aleatorio $\ket{\psi} \in \mathcal{H}_{R}\subset \mathcal{H}$, la probabilidad que $D(\omega_{S}^{\psi},\Omega_{S}) > \frac{1}{2} \sqrt{\frac{d_{S} \delta}{d_{R}}}+ \epsilon$caiga exponencialmente con $\epsilon^{2}d_{R}$:
+donde $\Pi_{k}$ es el proyector sobre $\mathcal{H}_{R}$.
+
+\item Para un estado aleatorio $\ket{\psi} \in \mathcal{H}_{R}\subset \mathcal{H}$, la probabilidad que $D(\omega_{S}^{\psi},\Omega_{S}) > \frac{1}{2} \sqrt{\frac{d_{S} \delta}{d_{R}}}+ \epsilon$ caiga exponencialmente con $\epsilon^{2}d_{R}$:
 \begin{equation}
-Pr_{\psi} \{ D(\omega_{S}^{\psi}, \Omega_{S}) > \frac{1}{2}\sqrt{\frac{d_{S} \delta}{d_{R}}} + \epsilon \} \leq 2exp(-C'\epsilon^{2}d_{R}),
+\Pr_{\psi} \bigg \{ D(\omega_{S}^{\psi}, \Omega_{S}) > \frac{1}{2}\sqrt{\frac{d_{S} \delta}{d_{R}}} + \epsilon \bigg \} \leq 2exp(-C'\epsilon^{2}d_{R}),
 \end{equation}
-con $C'=\frac{2}{9 \pi^{3}}$ si se pone $\epsilon=d_{R}^{-1/3}$ da una distancia promedio pequeña con alta probabilidad cuando $d_{R}>>d_{S}$.
+con $C'=\frac{2}{9 \pi^{3}}$. Si se pone $\epsilon=d_{R}^{-1/3}$ da una distancia promedio pequeña con alta probabilidad cuando $d_{R}>>d_{S}$.
+\end{enumerate}
 \end{theorem}
 
-\textbf{Demostración i)}
-Se usa la relación ya establecida entre la distancia de traza y la distancia de Hilbert-Schmidt
-\begin{multline}
-\langle D(\omega_{S}, \langle \omega_{S} \rangle_{\psi}) \rangle_{\psi} \leq \langle \frac{1}{2} \sqrt{d_{S} \Tr (\omega_{S}, \langle \omega_{S} \rangle_{\psi})^{2}} \rangle_{\psi}\\
-\leq \frac{1}{2} \sqrt{d_{S} \langle \Tr (\omega_{S}, \langle \omega_{S} \rangle_{\psi})^{2} \rangle_{\psi}}
+\textbf{Demostración }
+\begin{enumerate}
+
+\item Se usa la relación ya establecida entre la distancia de traza y la distancia de Hilbert-Schmidt
+\begin{multline}\label{a12}
+\langle D(\omega_{S}, \langle \omega_{S} \rangle_{\psi}) \rangle_{\psi} \leq \bigg \langle \frac{1}{2} \sqrt{d_{S} \Tr (\omega_{S}, \langle \omega_{S} \rangle_{\psi})^{2}} \bigg \rangle_{\psi}\\
+\leq \frac{1}{2} \sqrt{d_{S} \Big \langle \Tr (\omega_{S} - \langle \omega_{S} \rangle_{\psi})^{2} \Big \rangle_{\psi}}.
 \end{multline}
-ahora se prueban las cotas al término promediado
+Ahora se miran las cotas del término que es promediado
 
 \begin{multline}
-\langle \Tr (\omega_{S}, \langle \omega_{S} \rangle_{\psi})^{2} \rangle_{\psi} = \langle \Tr(\omega_{S}^{2})_{\psi} \rangle - \Tr_{S} (\langle \omega_{S}^{2} \rangle_{\psi})\\
+\Big \langle \Tr (\omega_{S}, \langle \omega_{S} \Big \rangle_{\psi})^{2} \rangle_{\psi} 	\\
+= \big \langle \Tr(\omega_{S}^{2})_{\psi} \big \rangle - \Tr_{S} (\langle \omega_{S}^{2} \rangle_{\psi})\\
 =\Tr (   (\langle \omega_{S} \otimes \omega_{S} \rangle_{\psi} - \langle \omega_{S} \rangle_{\psi} \otimes \langle \omega_{S} \rangle_{\psi} )F )\\
 = \Tr_{SS} \Big( \Tr_{BB} \Big( \$ \otimes \$ \Big[ \langle \ket{\psi}\bra{\psi} \otimes  \ket{\psi}\bra{\psi}\rangle_{\psi} - \frac{\Pi_{R}}{d_{R}} \otimes  \frac{\Pi_{R}}{d_{R}}  \Big]  \Big) F \Big)\\
-= \Tr_{SS} \Big( \Tr_{BB} \Big( \$ \otimes \$ \Big[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} - \frac{\Pi_{RR}}{d_{R}^{2}}  \Big]  \Big) F \Big)\\
-\leq \Tr_{SS} \Big(  \Tr_{BB} \Big( \$ \otimes \$ \Big[ \frac{\Pi_{RR}F}{d_{R}^{2}} \Big] \Big) F \Big)\\
-=  \sum_{kl}  \Tr_{SS} \Big(  \Tr_{BB} \Big( \ket{kl}\bra{kl}[ \frac{\Pi_{RR}F}{d_{R}^{2}}  \ket{lk}\bra{kl} \Big) F \Big)\\
+= \Tr_{SS} \bigg( \Tr_{BB} \bigg( \$ \otimes \$ \bigg[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} - \frac{\Pi_{RR}}{d_{R}^{2}}  \bigg]  \bigg) F \bigg)\\
+\leq \Tr_{SS} \bigg(  \Tr_{BB} \bigg( \$ \otimes \$ \bigg[ \frac{\Pi_{RR}F}{d_{R}^{2}} \bigg] \bigg) F \bigg)\\
+=  \sum_{kl}  \Tr_{SS} \Big(  \Tr_{BB} \Big( \ket{kl}\bra{kl} \frac{\Pi_{RR}}{d_{R}^{2}}  \ket{lk}\bra{kl} \Big) F \Big)\\
 = \sum_{kl} \frac{\bra{kl}\Pi_{RR}\ket{lk}}{d_{R}^{2}} \Tr_{S}(\Tr_{B}(\ket{k}\bra{k}) \Tr_{B}(\ket{l}\bra{l}) )\\
 \leq \sum_{kl} \frac{\bra{k}\Pi_{R}\ket{l}\bra{l}\Pi_{R}\ket{k}}{d_{R}^{2}} \Tr_{S} \Big( \frac{(\Tr_{B}(\ket{k}\bra{k}))^{2}+(\Tr_{B}(\ket{l}\bra{l}))^{2}}{2} \Big)\\
 =\frac{1}{d_{R}} \sum_{k} \bra{k} \frac{\Pi_{R}}{d_{R}} \ket{k} \Tr_{S} \Big( (\Tr_{B} \ket{k}\bra{k})^{2} \Big)\\
-\leq \frac{1}{d_{R}} \sum_{k} \bra{k} \frac{\Pi_{R}}{d_{R}} \ket{k} =\frac{1}{d_{R}}
+\leq \frac{1}{d_{R}} \sum_{k} \bra{k} \frac{\Pi_{R}}{d_{R}} \ket{k} = \frac{1}{d_{R}}
 \end{multline}
-en la segunda desigualdad se usó elhecho que $\Tr_{S} (\Tr_{B} \ket{k}\bra{k}-\Tr_{B} \ket{l}\bra{l})^{2}\geq 0$ es las traza de un operador positivo.
+en la segunda desigualdad se usó el hecho que $\Tr_{S} (\Tr_{B} \ket{k}\bra{k}-\Tr_{B} \ket{l}\bra{l})^{2}\geq 0$ es las traza de un operador positivo. Ahora insertando la tercera línea contando desde el final y la última línea a \ref{a12} se demuestra el resultado.
+\item Para demostrar la segunda parte que todos los estados $\ket{\psi}$ llevan al mismo estado de equilibrio, se usa el ya conocido lema de Levy. Se aplica este lema directamente a la función $f(\psi) \equiv D(\omega_{S}^{\psi}, \Omega_{S})$ en la hiperesfera de dimensión $2d_{R}-1$ de estados cuánticos. Para hallar la constante de Lipschitz se sigue de la misma manera que en el capítulo anterior
+\begin{multline}
+|D(\omega_{S}^{\psi_{1}}, \Omega_{S})-D(\omega_{S}^{\psi_{2}},\Omega_{S})| \leq D(\omega_{S}^{\psi_{1}},\omega_{S}^{\psi_{2}})
+\\
+\leq D(\omega^{\psi_{1}},\omega^{\psi_{2}})
+\\
+= \sqrt{1- |\bra{\psi_{1}} \ket{\psi_{2}}|^{2}}
+\\
+\leq |\ket{\psi_{1}} - \ket{\psi_{2}}|_{2}.
+\end{multline} 
+entonces la constante de Lipschitz satisface $\eta \leq 1$. Sustituyendo en el lema de Levy junto con el valor promedio encontrado en la primera parte de esta demostración se llega al resultado deseado.
+\\
+\end{enumerate}
 
-\textbf{Independencia del estado del ambiente}
-PAra un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$.ya se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B}>>d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
-\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
-Los problemas son que el estado de equilibrio no siempre es independiente del estado inicial del subsiste,a. si el subsistema puede cambiar al ambiente de forma drástica el estado de equilibrio sí dependerá del estado inicial del subsistema. aquí muestra que las dimensiones del espacio de Hilbert del subsistemas el ambiente son importante pero el valor se le haya dado una restricción al Hamiltoniano (Brechas de energías no degeneradas ) esta condición no están estricta como para no permitir cantidades conservadas en el subsistema cuando estas cantidades conservadas existen los estados del subsistema con diferentes constantes(estados inicial es diferentes )no podrán llegar al mismo estado de equilibrio.
+Para un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$ se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B} \gg d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
+\\
 
+
+
+%-----------------------------
+%\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
+%Los problemas son que el estado de equilibrio no siempre es independiente del estado inicial del subsiste,a. si el subsistema puede cambiar al ambiente de forma drástica el estado de equilibrio sí dependerá del estado inicial del subsistema. aquí muestra que las dimensiones del espacio de Hilbert del subsistemas el ambiente son importante pero el valor se le haya dado una restricción al Hamiltoniano (Brechas de energías no degeneradas ) esta condición no están estricta como para no permitir cantidades conservadas en el subsistema cuando estas cantidades conservadas existen los estados del subsistema con diferentes constantes(estados inicial es diferentes )no podrán llegar al mismo estado de equilibrio.
+%-----------------
 
